    - Rewrote design.txt.
    - Use text frontend for ia64 installs via serial console by default,
      since the default ia64 serial console is 9600 baud.
    - Add English to i386 root floppies, to avoid #269971.
    - Set build date to the version date from the changelog when doing
      official builds, so all builds of a given version claim the same date.
  * dann frazier
    - Add ia64 elilo .msg files from Jim Lieb
    - Add ia64 2.6 image build goo, contributed by Jim Lieb
      Closes: #267689
    - Move ia64 2.6 flavor to 2.6.8-1
    - Move ia64 2.4 flavor to 2.4.27-1
  * Bastian Blank
    - Drop the whole bunch of languages on s390.
  * Stephen R. Marenka
    - Modify m68k/atari bootargs to default to
      debian-installer/framebuffer=false.
    - Update m68k manual.
    - Add bootfloppy.cfg for all vme.
    - Enable vme builds.
    - m68k image reorganization.
    - Add some m68k/q40 support.
    - Update all m68k 2.4 kernels to 2.4.27.
    - Add preseed to nativehd/m68k.
  * Martin Michlmayr
    - Improve manifest descriptions of the Broadcom BCM1250 (SWARM)
      evaluation board.
    - Put a SiByl TFTP boot configuration script to sb1-swarm-bn/netboot.
    - Put the SiByl boot loader to sb1-swarm-bn/netboot.
    - Update the Cobalt manifest descriptions to reflect reality
      (the config now uses NFS, not TFTP).
    - Create an nfsroot tar file for Cobalt which can easily be extracted
      (containing all files including proper symlinks).
    - Put sibyl-installer on the sb1-swarm-bn/netboot initrd as a workaround
      to change debian-installer/kernel/linux/link_in_boot.
    - Switch mips and mipsel over to 2.4.27.
    - Put USB and input modules on the sb1-swarm-bn/netboot initrd to allow
      "desktop like" installations with framebuffer and USB keyboards.
    - Make sure that the serial console on Cobalt gets turned on.
    - Cleanup the ARM config files: declare most variables in one place and