@@ -78,6 +78,8 @@ debian-installer (20040806) UNRELEASED; urgency=medium
     - Add English to i386 root floppies, to avoid #269971.
     - Set build date to the version date from the changelog when doing
       official builds, so all builds of a given version claim the same date.
+    - Add a dummy entry to the status file for that gives the overall version
+      of the installer image.
   * dann frazier
     - Add ia64 elilo .msg files from Jim Lieb
     - Add ia64 2.6 image build goo, contributed by Jim Lieb
